[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Library.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1035.0
margin_bottom = 615.0
color = Color( 0.227451, 0.282353, 0.4, 1 )

[node name="Button" type="Button" parent="."]
margin_left = 77.0
margin_top = 110.0
margin_right = 218.0
margin_bottom = 173.0
text = "F1 2021"

[node name="Button2" type="Button" parent="."]
margin_left = 259.0
margin_top = 108.0
margin_right = 394.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 42, 31 )
text = "F1 2012"

[node name="Button3" type="Button" parent="."]
margin_left = 433.0
margin_top = 108.0
margin_right = 582.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 42, 31 )
text = "F1 2008 (Unavailable)"

[node name="Button5" type="Button" parent="."]
margin_left = 611.0
margin_top = 109.0
margin_right = 746.0
margin_bottom = 173.0
rect_pivot_offset = Vector2( 42, 31 )
text = "F2 2022"

[node name="Button4" type="Button" parent="."]
margin_left = 853.0
margin_top = 49.0
margin_right = 999.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( 42, 31 )
text = "Return to Main Menu"

[node name="Label" type="Label" parent="."]
margin_left = 444.0
margin_top = 542.0
margin_right = 912.0
margin_bottom = 580.0
text = "Do you want your mod to be on here? dm me at itsabby#7677 on discord"

[node name="Button6" type="Button" parent="."]
margin_left = 85.0
margin_top = 526.0
margin_right = 373.0
margin_bottom = 568.0
text = "Open Pastebin Repository (Upcoming)"

[node name="Label2" type="Label" parent="."]
margin_left = 291.0
margin_top = 54.0
margin_right = 501.0
margin_bottom = 80.0
text = "The Library of Saves"
align = 1

[node name="Button7" type="Button" parent="."]
margin_left = 787.0
margin_top = 219.0
margin_right = 1002.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 206, 34 )
text = "Repository Tutorial"

[node name="Button8" type="Button" parent="."]
margin_left = 786.0
margin_top = 295.0
margin_right = 1001.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 206, 34 )
text = "Modmaking Tutorial"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
